# lore-hound

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  pyrightconfig.json
.opencode/context/: architecture.md  domain.md  standards.md
lorehound/: settings.py  urls.py  wsgi.py
research/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
research/management/commands/: seed_data.py
research/migrations/: 0001_initial.py  0002_alter_repository_id_alter_researchsession_id_and_more.py  0003_add_reasoning_field.py
research/services/: agent.py  llm_client.py  repo_manager.py  tools.py
