[project]
name = "lore-hound"
version = "0.1.0"
description = "A tenacious AI agent that hunts through codebases, sniffs out architectural patterns, and leaves a trail of cited findings in its Django-PostgreSQL kennel."
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=5.2.14",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest-django>=4.12.0",
]
